src/test/compile-fail/import4.rs
// error-pattern: cyclic import

import zed::bar;
import bar::zed;

fn main(args: [istr]) { log "loop"; }
